@@ -1,3 +1,7 @@
+[B]Version v1.7.0[/B]
+- New live channels added.
+- Fixed pagination URL. 
+
 [B]Version v1.6.9[/B]
 - Playwire links parsing corrected. 
 
